Update title and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kavin Selvam - Full Stack Developer | Interview Ready Portfolio</title>
+    <title>Kavin Selvam - Full GAY Developer | Interview Ready Portfolio</title>
     <style>
         :root {
             --primary: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -201,8 +201,8 @@
             </div>
             <div class="contact-badges">
                 <div class="badge">📞 +91 6385521140</div>
-                <div class="badge">✉️ kavincsesgmail.com</div>
-                <div class="badge">📍 Chennai, Tamil Nadu</div>
+                <div class="badge">✉️ kavincses@gmail.com</div>
+                <div class="badge">📍 Rasipuram, Tamil Nadu</div>
                 <div class="badge">🌐 <a href="#" style="color: inherit;">GitHub</a></div>
                 <div class="badge">💼 <a href="#" style="color: inherit;">LinkedIn</a></div>
             </div>
