--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kavin Selvam - Full GAY Developer | Interview Ready Portfolio</title>
+    <title>Kavin Selvam - Full Stack Developer | Interview Ready Portfolio</title>
     <style>
         :root {
             --primary: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
